dist_man1_MANS=

if BUILD_EXPOSITIOD
  dist_man1_MANS+=expositiod.1
endif

if ENABLE_QT
  dist_man1_MANS+=expositio-qt.1
endif

if BUILD_EXPOSITIO_CLI
  dist_man1_MANS+=expositio-cli.1
endif

if BUILD_EXPOSITIO_TX
  dist_man1_MANS+=expositio-tx.1
endif

if ENABLE_WALLET
if BUILD_EXPOSITIO_WALLET
  dist_man1_MANS+=expositio-wallet.1
endif
endif
